--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
             <li class="itens">Profissionais Qualificados</li> 
             </ul>
 
-            <img src="logo.jpg" class="beneficios.jpg">
+            <img id="logo.jpg" class="beneficios.jpg">
          </div>
     </body>
 </html>
