--- a/produto.html
+++ b/produto.html
@@ -29,13 +29,13 @@
               <p> 90,00</p>
             </li>
             <li>
-              <h2></h2>
+              <h2>Tenis</h2>
               <img src="tenis.jpg">
               <p> Confortavel e Bonito</p>
               <p>R$ 150,00</p>
             </li>
             <li>
-              <h2></h2>
+              <h2>Chinelo</h2>
               <img src="chinelo.png">
               <p> Perfeito Para Ir Pra Praia</p>
               <p>75,00</p>
